--- a/index.html
+++ b/index.html
@@ -1,13 +1,30 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
   <title>Document</title>
 </head>
 <body>
+  <center>
+    <div>
+      <input placeholder="Enter your amount" id="first-input" name="firstAmount"/>
+      <select id="first-currency">
 
+      </select>
+
+      <input placeholder="Enter your amount" id="second-input" name="secondAmount"/>
+      <select id="second-currency">
+
+      </select>
+    </div>
+  </center>
+  <script src="js/main.js"></script>
 </body>
 </html>
