--- a/index.html
+++ b/index.html
@@ -15,14 +15,9 @@
   <center>
     <div>
       <input placeholder="Enter your amount" id="first-input" name="firstAmount"/>
-      <select id="first-currency">
-
-      </select>
-
+      <select id="first-currency"></select>
       <input placeholder="Enter your amount" id="second-input" name="secondAmount"/>
-      <select id="second-currency">
-
-      </select>
+      <select id="second-currency"></select>
     </div>
   </center>
   <script src="js/main.js"></script>
